objects/MessagingSession.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Messaging Sessions</relationshipLabel>
        <relationshipName>Messaging_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuthRequestTime__c</fullName>
        <label>AuthRequestTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AuthSessionId__c</fullName>
        <label>AuthSessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Messaging Sessions</relationshipLabel>
        <relationshipName>Messaging_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Requested_Agent_Name__c</fullName>
        <description>This field holds the name of the next agent requested for the current session</description>
        <inlineHelpText>Name of the next agent requested</inlineHelpText>
        <label>Next Requested Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Fallback_Messaging_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>Fallback_Messaging</label>
        <queue>Fallback_Messaging</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Messaging_MessagingSession</fullName>
        <filterScope>Queue</filterScope>
        <label>Messaging</label>
        <queue>Messaging</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>